--- a/.gitattributes
+++ b/.gitattributes
@@ -11,4 +11,6 @@
 /composer.json export-ignore
 /composer.lock export-ignore
 /package.json export-ignore
+/LICENSE.md export-ignore
 /.travis.yml export-ignore
+/phpcs.xml export-ignore
